@@ -1,8 +1,7 @@
 package com.vitaliy.kairachka.arthew.service.impl;
 
-import com.vitaliy.kairachka.arthew.model.dto.PhotoDto;
 import com.vitaliy.kairachka.arthew.model.dto.requests.create.CreatePhotoRequest;
-import com.vitaliy.kairachka.arthew.model.entity.Photo;
+import com.vitaliy.kairachka.arthew.model.dto.response.PhotoResponse;
 import com.vitaliy.kairachka.arthew.model.mapper.PhotoMapper;
 import com.vitaliy.kairachka.arthew.repository.PhotoRepository;
 import com.vitaliy.kairachka.arthew.service.PhotoService;
@@ -10,7 +9,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,6 +16,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /**
  * @author Vitaliy Kayrachka
@@ -32,21 +31,25 @@ public class PhotoServiceImpl implements PhotoService {
 
     @Override
     @Cacheable(value = "photos")
-    public List<Photo> getAllPhotos(Pageable pageable) {
+    public List<PhotoResponse> getAllPhotos(Pageable pageable) {
         log.info("Get all photos");
-        return photoRepository.findAll(pageable).toList();
+        var list = photoRepository.findAll(pageable).toList();
+        return list
+                .stream()
+                .map(photoMapper::toResponseFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
     @Transactional
     @CacheEvict(value = "photos", allEntries = true)
-    public List<PhotoDto> createPhoto(List<CreatePhotoRequest> requestList) {
-        List<PhotoDto> responseList = new ArrayList<>();
+    public List<PhotoResponse> createPhoto(List<CreatePhotoRequest> requestList) {
+        List<PhotoResponse> responseList = new ArrayList<>();
         requestList.forEach(request -> {
             var photoDto = photoMapper.toDtoFromRequest(request);
             var entity = photoMapper.toEntityFromDto(photoDto);
             log.info("Create new photo with uuid: {}", entity.getId());
-            responseList.add(photoMapper.toDtoFromEntity(photoRepository.save(entity)));
+            responseList.add(photoMapper.toResponseFromEntity(photoRepository.save(entity)));
         });
         return responseList;
     }
