@@ -2,7 +2,7 @@ package com.vitaliy.kairachka.arthew.service.impl;
 
 import com.vitaliy.kairachka.arthew.model.dto.PlaceDto;
 import com.vitaliy.kairachka.arthew.model.dto.requests.create.CreatePlaceRequest;
-import com.vitaliy.kairachka.arthew.model.entity.Place;
+import com.vitaliy.kairachka.arthew.model.dto.response.PlaceResponse;
 import com.vitaliy.kairachka.arthew.model.mapper.PlaceMapper;
 import com.vitaliy.kairachka.arthew.repository.PlaceRepository;
 import com.vitaliy.kairachka.arthew.repository.RegionRepository;
@@ -11,12 +11,12 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @author Vitaliy Kayrachka
@@ -32,41 +32,49 @@ public class PlaceServiceImpl implements PlaceService {
 
     @Override
     @Cacheable(value = "places")
-    public List<Place> getAllPlaces(Pageable pageable) {
+    public List<PlaceResponse> getAllPlaces(Pageable pageable) {
         log.info("Get all places");
-        return placeRepository.findAll(pageable).toList();
+        var list = placeRepository.findAll(pageable).toList();
+        return list
+                .stream()
+                .map(placeMapper::toResponseFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
     @Cacheable(value = "places")
-    public PlaceDto getPlaceById(Long id) {
+    public PlaceResponse getPlaceById(Long id) {
         var entity = placeRepository.findById(id);
         if (entity.isPresent()) {
             log.info("Get place with id: {}", id);
-            return placeMapper.toDtoFromEntity(entity.get());
+            return placeMapper.toResponseFromEntity(entity.get());
         } else {
             log.info("Place not found with id: {}", id);
-            throw new RuntimeException(); //TODO
+            return new PlaceResponse()
+                    .setId(id)
+                    .setIsFound(false);
         }
     }
 
     @Override
     @Cacheable(value = "places")
-    public PlaceDto getPlaceByName(String name) {
+    public PlaceResponse getPlaceByName(String name) {
         var entity = placeRepository.findPlaceByName(name);
         if (entity.isPresent()) {
             log.info("Get place with name: {}", name);
-            return placeMapper.toDtoFromEntity(entity.get());
+            return placeMapper.toResponseFromEntity(entity.get());
         } else {
             log.info("Place not found with name: {}", name);
-            throw new RuntimeException(); //TODO
+            return new PlaceResponse()
+                    .setName(name)
+                    .setIsFound(false);
         }
     }
 
     @Override
     @Transactional
     @CacheEvict(value = "places", allEntries = true)
-    public PlaceDto createPlace(CreatePlaceRequest request) {
+    public PlaceResponse createPlace(CreatePlaceRequest request) {
         var placeDto = placeMapper.toDtoFromRequest(request);
         var entity = placeMapper.toEntityFromDto(placeDto);
         var regionDto = placeDto.getRegion();
@@ -75,21 +83,23 @@ public class PlaceServiceImpl implements PlaceService {
             region.ifPresent(entity::setRegion);
         }
         log.info("Create new place with name: {}", entity.getName());
-        return placeMapper.toDtoFromEntity(placeRepository.save(entity));
+        return placeMapper.toResponseFromEntity(placeRepository.save(entity));
     }
 
     @Override
     @Transactional
     @CacheEvict(value = "places", allEntries = true)
-    public PlaceDto updatePlace(Long id, PlaceDto placeDto) {
+    public PlaceResponse updatePlace(Long id, PlaceDto placeDto) {
         var target = placeRepository.findById(id);
         if (target.isPresent()) {
             var update = placeMapper.toEntityFromDto(placeMapper.merge(placeDto, target.get()));
             log.info("Place update with id: {}", id);
-            return placeMapper.toDtoFromEntity(placeRepository.save(update));
+            return placeMapper.toResponseFromEntity(placeRepository.save(update));
         } else {
             log.info("Place not found with id: {}", id);
-            throw new RuntimeException(); //TODO
+            return new PlaceResponse()
+                    .setId(id)
+                    .setIsFound(false);
         }
     }
 
