@@ -2,10 +2,10 @@ package com.vitaliy.kairachka.arthew.service.impl;
 
 import com.vitaliy.kairachka.arthew.model.dto.TaskDto;
 import com.vitaliy.kairachka.arthew.model.dto.requests.create.CreateTaskRequest;
+import com.vitaliy.kairachka.arthew.model.dto.response.TaskResponse;
 import com.vitaliy.kairachka.arthew.model.entity.Task;
 import com.vitaliy.kairachka.arthew.model.mapper.TaskMapper;
 import com.vitaliy.kairachka.arthew.repository.TaskRepository;
-import com.vitaliy.kairachka.arthew.repository.UserRepository;
 import com.vitaliy.kairachka.arthew.service.TaskService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -13,13 +13,13 @@ import org.quartz.*;
 import org.quartz.impl.StdSchedulerFactory;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @author Vitaliy Kayrachka
@@ -30,54 +30,61 @@ import java.util.List;
 public class TaskServiceImpl implements TaskService {
 
     private final TaskRepository taskRepository;
-    private final UserRepository userRepository;
     private SimpMessagingTemplate messagingTemplate;
     private final TaskMapper taskMapper;
 
 
     @Override
     @Cacheable(value = "tasks")
-    public List<Task> getAllTasks(Pageable pageable) {
+    public List<TaskResponse> getAllTasks(Pageable pageable) {
         log.info("Get all tasks");
-        return taskRepository.findAll(pageable).toList();
+        var list = taskRepository.findAll(pageable).toList();
+        return list
+                .stream()
+                .map(taskMapper::toResponseFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
     @Cacheable(value = "tasks")
-    public TaskDto getTaskById(Long id) {
+    public TaskResponse getTaskById(Long id) {
         var entity = taskRepository.findById(id);
         if (entity.isPresent()) {
             log.info("Get task with id: {}", id);
-            return taskMapper.toDtoFromEntity(entity.get());
+            return taskMapper.toResponseFromEntity(entity.get());
         } else {
             log.info("Task not found with id: {}", id);
-            throw new RuntimeException(); //TODO
+            return new TaskResponse()
+                    .setId(id)
+                    .setIsFound(false);
         }
     }
 
     @Override
     @Cacheable(value = "tasks")
-    public TaskDto getTaskByName(String name) {
+    public TaskResponse getTaskByName(String name) {
         var entity = taskRepository.findTaskByName(name);
         if (entity.isPresent()) {
             log.info("Get task with name: {}", name);
-            return taskMapper.toDtoFromEntity(entity.get());
+            return taskMapper.toResponseFromEntity(entity.get());
         } else {
             log.info("Task not found with name: {}", name);
-            throw new RuntimeException(); //TODO
+            return new TaskResponse()
+                    .setName(name)
+                    .setIsFound(false);
         }
     }
 
     @Override
     @Transactional
     @CacheEvict(value = "tasks", allEntries = true)
-    public TaskDto createTask(CreateTaskRequest request) {
+    public TaskResponse createTask(CreateTaskRequest request) {
         var taskDto = taskMapper.toDtoFromRequest(request);
         var entity = taskMapper.toEntityFromDto(taskDto);
         var savedEntity = taskRepository.save(entity);
         sendNotification(savedEntity);
         log.info("Create new task with name: {}", savedEntity.getName());
-        return taskMapper.toDtoFromEntity(savedEntity);
+        return taskMapper.toResponseFromEntity(savedEntity);
     }
 
     private void sendNotification(Task task) {
@@ -96,7 +103,7 @@ public class TaskServiceImpl implements TaskService {
                     .build();
             scheduler.scheduleJob(job, trigger);
         } catch (SchedulerException exception) {
-            exception.printStackTrace(); //TODO
+            exception.printStackTrace();
         }
     }
 
@@ -107,15 +114,17 @@ public class TaskServiceImpl implements TaskService {
     @Override
     @Transactional
     @CacheEvict(value = "tasks", allEntries = true)
-    public TaskDto updateTask(Long id, TaskDto taskDto) {
+    public TaskResponse updateTask(Long id, TaskDto taskDto) {
         var target = taskRepository.findById(id);
         if (target.isPresent()) {
             var update = taskMapper.toEntityFromDto(taskMapper.merge(taskDto, target.get()));
             log.info("Task update with id: {}", id);
-            return taskMapper.toDtoFromEntity(taskRepository.save(update));
+            return taskMapper.toResponseFromEntity(taskRepository.save(update));
         } else {
             log.info("Task not found with id: {}", id);
-            throw new RuntimeException(); //TODO
+            return new TaskResponse()
+                    .setId(id)
+                    .setIsFound(false);
         }
     }
 
