@@ -1,10 +1,10 @@
 package com.vitaliy.kairachka.arthew.service.impl;
 
 import com.vitaliy.kairachka.arthew.model.dto.UserDto;
+import com.vitaliy.kairachka.arthew.model.dto.requests.UserLoginRequest;
 import com.vitaliy.kairachka.arthew.model.dto.requests.create.CreateUserRequest;
-import com.vitaliy.kairachka.arthew.model.dto.requests.login.LoginUserRequest;
-import com.vitaliy.kairachka.arthew.model.dto.response.login.ResponseUserLogin;
-import com.vitaliy.kairachka.arthew.model.entity.User;
+import com.vitaliy.kairachka.arthew.model.dto.response.UserLoginResponse;
+import com.vitaliy.kairachka.arthew.model.dto.response.UserResponse;
 import com.vitaliy.kairachka.arthew.model.mapper.UserMapper;
 import com.vitaliy.kairachka.arthew.repository.UserRepository;
 import com.vitaliy.kairachka.arthew.service.UserService;
@@ -12,12 +12,12 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.vitaliy.kairachka.arthew.utils.PasswordEncryption.checkPassword;
 import static com.vitaliy.kairachka.arthew.utils.PasswordEncryption.hashedPassword;
@@ -34,9 +34,9 @@ public class UserServiceImpl implements UserService {
     private final UserMapper userMapper;
 
     @Override
-    public ResponseUserLogin login(LoginUserRequest request) {
+    public UserLoginResponse login(UserLoginRequest request) {
         var result = getUserByLogin(request.getLogin());
-        return new ResponseUserLogin()
+        return new UserLoginResponse()
                 .setIsSuccess(checkPassword(request.getPassword(), result.getPassword()))
                 .setId(result.getId())
                 .setLogin(result.getLogin())
@@ -45,59 +45,70 @@ public class UserServiceImpl implements UserService {
 
     @Override
     @Cacheable(value = "users")
-    public List<User> getAllUsers(Pageable pageable) {
+    public List<UserResponse> getAllUsers(Pageable pageable) {
         log.info("Get all users");
-        return userRepository.findAll(pageable).toList();
+        var list = userRepository.findAll(pageable).toList();
+        return list
+                .stream()
+                .map(userMapper::toResponseFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
     @Cacheable(value = "users")
-    public UserDto getUserById(Long id) {
+    public UserResponse getUserById(Long id) {
         var entity = userRepository.findById(id);
         if (entity.isPresent()) {
             log.info("Get user with id: {}", id);
-            return userMapper.toDtoFromEntity(entity.get());
+            return userMapper.toResponseFromEntity(entity.get());
         } else {
             log.info("User not found with id: {}", id);
-            throw new RuntimeException(); //TODO
+            return new UserResponse()
+                    .setId(id)
+                    .setIsFound(false);
         }
     }
 
     @Override
     @Cacheable(value = "users")
-    public UserDto getUserByLogin(String login) {
+    public UserResponse getUserByLogin(String login) {
         var entity = userRepository.findUserByLogin(login);
         if (entity.isPresent()) {
             log.info("Get user with login: {}", login);
-            return userMapper.toDtoFromEntity(entity.get());
+            return userMapper.toResponseFromEntity(entity.get());
         } else {
             log.info("User not found with login: {}", login);
-            throw new RuntimeException(); //TODO
+            return new UserResponse()
+                    .setLogin(login)
+                    .setIsFound(false);
         }
     }
 
     @Override
     @Transactional
     @CacheEvict(value = "users", allEntries = true)
-    public UserDto createUser(CreateUserRequest createUserRequest) {
+    public UserResponse createUser(CreateUserRequest createUserRequest) {
         var userDto = userMapper.toDtoFromRequest(createUserRequest);
         var entity = userMapper.toEntityFromDto(userDto);
+        entity.setPassword(hashedPassword(entity.getPassword()));
         log.info("Create new user with login: {}", entity.getLogin());
-        return userMapper.toDtoFromEntity(userRepository.save(entity));
+        return userMapper.toResponseFromEntity(userRepository.save(entity));
     }
 
     @Override
     @Transactional
     @CacheEvict(value = "users", allEntries = true)
-    public UserDto updateUser(Long id, UserDto userDto) {
+    public UserResponse updateUser(Long id, UserDto userDto) {
         var target = userRepository.findById(id);
         if (target.isPresent()) {
             var update = userMapper.toEntityFromDto(userMapper.merge(userDto, target.get()));
             log.info("User update with id: {}", id);
-            return userMapper.toDtoFromEntity(userRepository.save(update));
+            return userMapper.toResponseFromEntity(userRepository.save(update));
         } else {
             log.info("User not found with id: {}", id);
-            throw new RuntimeException(); //TODO
+            return new UserResponse()
+                    .setId(id)
+                    .setIsFound(false);
         }
     }
 
